flux/prometheus/yaml/httproutes.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    istio.io/ingress-use-waypoint: "true"
  name: prometheus-httproute
  namespace: prometheus
spec:
  ports:
  - name: http-web
    port: 9090
    protocol: TCP
    targetPort: 9090
  - appProtocol: http
    name: reloader-web
    port: 8080
    protocol: TCP
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: prometheus-kube-prometheus-prometheus
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  hostnames:
  - prometheus.int.beansnet.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal-gateway
    namespace: istio-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: prometheus-kube-prometheus-prometheus
      port: 9090
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: v1
kind: Service
metadata:
  labels:
    istio.io/ingress-use-waypoint: "true"
  name: grafana-httproute
  namespace: prometheus
spec:
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: grafana
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: grafana
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: prometheus
spec:
  hostnames:
  - grafana.int.beansnet.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal-gateway
    namespace: istio-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: prometheus-grafana
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
